feat(shared): small style fix, ready to review

--- a/packages/shared/src/components/ErrorModal/errorModal.css
+++ b/packages/shared/src/components/ErrorModal/errorModal.css
@@ -23,6 +23,7 @@
 
 .ErrorModal__container__details__box.-showBox{
   max-height: 120px;
+  padding-bottom: 20px;
 }
 
 .ErrorModal__container__details__box{
