fix(taboule): make ExpandView receive children

--- a/packages/taboule/src/components/expand-view/ExpandView.css
+++ b/packages/taboule/src/components/expand-view/ExpandView.css
@@ -9,16 +9,7 @@
   transition: all 0.4s linear;
   font-family: Roboto;
   display: flex;
-}
-
-.expand-view__list {
-  display: flex;
-  flex-direction: column;
-  list-style: none;
-  margin-top: 60px;
-  padding-left: 25px;
-  padding-right: 25px;
-  overflow: scroll;
+  z-index: 3000;
 }
 
 .expand-view.visible {
@@ -32,41 +23,4 @@
   border: none;
   background: transparent;
   cursor: pointer;
-}
-
-.expand-view__list__item {
-  margin-bottom: 30px;
-  position: relative;
-}
-
-.expand-view__list__item:after {
-  height: 1px;
-  width: 100%;
-  background-color: black;
-  position: absolute;
-  content: '';
-  display: block;
-  bottom: -15px;
-  opacity: 0.1;
-}
-
-.expand-view__list__item__link {
-  display: flex;
-  color: rgba(0, 0, 0, 0.87);
-  text-decoration: none;
-}
-
-.expand-view__list__item__img {
-  height: 120px;
-  width: 160px;
-  object-fit: cover;
-  margin-right: 15px;
-  border-radius: 5px;
-  border: 1px solid gainsboro;
-}
-
-.expand-view__list__item__text__views {
-  opacity: 0.8;
-  margin-top: 5px;
-  color: #f44336;
 }
